# spendguard-sdk

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish-spendguard-cli.yml  test.yml
contracts/: README.md  openapi.json
docs/: cynsta-spendguard.md  maintainer-setup.md  quickstart.md
examples/: generate_spendguard_openai_traffic.py  reconcile_spendguard_billing.py
skills/spendguard-strict-budget-runner/agents/: openai.yaml
skills/spendguard-strict-budget-runner/references/: error-playbook.md  routing-patterns.md  strict-budget-quickstart.md
skills/spendguard-strict-budget-runner/scripts/: bootstrap_strict_budget.py
src/cynsta_spendguard_cli/: main.py
src/spendguard_sdk/: __init__.py  client.py
tests/: test_cli.py  test_client.py
